# kaggle_env_template

./: .gitignore  LICENSE  README.md  initial-requirements.txt  postsetup-gpu.sh  pyproject.toml  setup.sh
.github/workflows/: tests-on-schedule.yml
notebooks/: template.ipynb
