[project]
name = "kaggle-env-template"
version = "0.1.0"
description = "a template of Kaggle experiment environment"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.10.11"
dependencies = [
    "accelerate==0.33.0",
    "altair==5.4.0",
    "catboost==1.2.5",
    "gplearn==0.4.2",
    "graphviz==0.20.3",
    "gymnasium==0.29.0",
    "h2o==3.46.0.4",
    "ipython==8.21.0",
    "jupyterlab==4.2.4",
    "kaggle==1.6.17",
    "lightgbm==4.2.0",
    "lime==0.2.0.1",
    "matplotlib==3.7.5",
    "mlxtend==0.23.1",
    "nltk==3.2.4",
    "numba==0.58.1",
    "numpy==1.26.4",
    "optuna==3.6.1",
    "pandas-datareader==0.10.0",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "polars==1.5.0",
    "protobuf==3.20.3",
    "pyarrow==17.0.0",
    "pydantic==2.8.2",
    "pytorch-lightning==2.4.0",
    "scikit-learn==1.2.2",
    "scipy==1.14.0",
    "seaborn==0.12.2",
    "sentencepiece==0.2.0",
    "shap==0.44.1",
    "spacy==3.7.5",
    "sympy==1.12",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "tqdm>=4.66.5",
    "xgboost==2.0.3",
]
authors = [{ name = "hmasdev" }]
maintainers = [{ name = "hmasdev" }]
keywords = ["kaggle", "experiment", "data-science", "machine-learning"]

[project.optional-dependencies]
gpu = [
    "torch==2.4.0+cu118",
    "torchaudio==2.4.0+cu118",
    "torchvision==0.19.0+cu118",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu118/torch",
    "https://download.pytorch.org/whl/cu118/torchaudio",
    "https://download.pytorch.org/whl/cu118/torchvision",
]
